--- a/Flat/news/templates/news/category_confirm_delete.html
+++ b/Flat/news/templates/news/category_confirm_delete.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
+<div id="colorlib-main">
+
+        <div class="container">
 <h1>Удалить категорию</h1>
 
 <p>Вы уверены что хотите удалить категорию: {{ delete }}?</p>
@@ -9,5 +12,6 @@
   {{ form.as_p}}
   <input type="submit" value="Да удалить." />
 </form>
-
+        </div>
+</div>
 {% endblock %}
