--- a/Flat/news/templates/news/news_tag.html
+++ b/Flat/news/templates/news/news_tag.html
@@ -2,32 +2,78 @@
 {% load _simpletag %}
 
 {% block content %}
-{%for item in news_tag %}
+
 <div id="colorlib-main">
-    <div class="container">
-        <div class="row d-flex">
-            <div class="col-xl-8 py-5 px-md-5">
-                <div class="col-md-12">
-                    <div class="blog-entry ftco-animate d-md-flex fadeInUp ftco-animated">
-                        <a href="single.html" class="img img-2" style="background-image:url('{{item.photo.url}}')"></a>
-                        <div class="text text-2 pl-md-4">
-                            <h3 class="mb-2"><a href="{{item.get_absolute_url }}">{{item.title}}g</a></h3>
-                            <div class="meta-wrap">
-                                <p class="meta">
-                                    <span>Dec 14, 2018</span>
-                                    <span><a href="single.html">{{item.category}}</a></span>
-                                    <span>5 Comment</span>
-                                </p>
+    <section class="ftco-section ftco-no-pt ftco-no-pb">
+        <div class="container">
+            <div class="row d-flex">
+                <div class="col-xl-8 py-5 px-md-5">
+                    <div class="row pt-md-4">
+                        {%for item in news_tag %}
+
+                        <div class="col-md-12">
+                        <div class="blog-entry ftco-animate d-md-flex fadeInUp ftco-animated">
+                            {% if item.photo %}
+                            <a href="single.html" class="img img-2" style="background-image:url('{{item.photo.url}}')"></a>
+                            {% endif %}
+                            <div class="text text-2 pl-md-4">
+                                <h3 class="mb-2"><a href="{{item.get_absolute_url}}">{{item.title}}</a></h3>
+                                <div class="meta-wrap">
+                                    <p class="meta">
+                                        <span>{{item.create_date}}</span>
+                                        <span><a href="single.html">{{item.category}}</a></span>
+                                        <span><i class="icon-comment2 mr-2"></i>{{ item.comment_set.count}}</span
+                                    </p>
+                                </div>
+                                <p class="mb-4">{{item.content| truncatewords:50}}.</p>
+                                <p><a href="{{item.get_absolute_url }}" class="btn-custom">Читать далее <span class="ion-ios-arrow-forward"></span></a></p>
+                                <hr>
                             </div>
-                            <p class="mb-4">{{item.content| truncatewords:50}}.</p>
-                            <p><a href="{{item.get_absolute_url }}" class="btn-custom">Читать далее <span class="ion-ios-arrow-forward"></span></a></p>
-                            <hr>
                         </div>
+                    </div> <!--новость-->
+
+                        {% endfor %}
                     </div>
+                    <nav aria-label="...">
+                        <ul class="pagination">
+                            {% if page_obj.has_previous %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{page_obj.previous_page_number}}" >Previous</a>
+                            </li>
+                            {% endif %}
+                            {%  for p in page_obj.paginator.page_range %}
+                            {% if page_obj.number == p %}
+                            <li class="page-item active">
+                                <a class="page-link" href="?page={{p}}">{{p}} <span class="sr-only">(current)</span></a>
+                            </li>
+                            {% elif p > page_obj.number|add:-3 and p < page_obj.number|add:3 %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{p}}">{{p}}</a>
+                            </li>
+                            {% endif %}
+                            {% endfor %}
+                            {% if page_obj.has_next %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{page_obj.next_page_number}}">Next</a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </nav>
                 </div>
+
+
             </div>
         </div>
-    </div>
+    </section>
 </div>
-{% endfor %}
+
+
+
+
+
+
+
+
+
+
 {% endblock %}
