--- a/Flat/news/templates/news/sidebar_right.html
+++ b/Flat/news/templates/news/sidebar_right.html
@@ -1,9 +1,9 @@
 <div class="col-xl-4 sidebar ftco-animate bg-light pt-5">
 <div class="sidebar-box pt-md-4">
-<form action="index.html#" class="search-form">
+<form action="{% url 'search_blog' %}" method="get" class="search-form">
 <div class="form-group">
 <span class="icon icon-search"></span>
-<input type="text" class="form-control" placeholder="Type a keyword and hit enter">
+<input type="text" class="form-control" name="b" placeholder="Новости по блогу">
 </div>
 </form>
 </div>
@@ -46,8 +46,8 @@
 </div> <!--облако тегов-->
 <div class="sidebar-box subs-wrap img py-4" style="background-image:url(/static/news/images/xbg_1.jpg.pagespeed.ic.yyDakF8d8Y.jpg)">
 <div class="overlay"></div>
-<h3 class="mb-4 sidebar-heading">Newsletter</h3>
-<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia</p>
+<h3 class="mb-4 sidebar-heading">Подписка</h3>
+<p class="mb-4">Введите эл.почту, что бы узнавать последние новости Jeffrey's Coffee</p>
 <form action="{% url 'news' %}" class="subscribe-form" method="post">
 <div class="form-group">
     {% csrf_token %}
