--- a/Flat/news/templates/news/update_news.html
+++ b/Flat/news/templates/news/update_news.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<div id="colorlib-main">
+
+<div class="container">
+<div class="row d-flex">
 <form action="" method="post" enctype="multipart/form-data">
 
     {% csrf_token %}
@@ -8,4 +12,7 @@
     <button type="submit" class="btn btn-primary" > Обновить Новость</button>
 
 </form>
+</div>
+</div>
+</div>
 {% endblock  %}
