--- a/Flat/templates/base.html
+++ b/Flat/templates/base.html
@@ -77,7 +77,7 @@ body {
     background: #343A40;
     box-sizing: border-box;
     border-top: 0px solid rgba(0, 0, 0, 0.3);
-    overflow-y: auto;
+    overflow-y: scroll;
     font-family: Verdana;
 
 
